[package]
name = "pingmoji"
version = "1.0.0"
edition = "2024"
license-file = "LICENSE"
description = "Useless CLI utility that parses chains of emojis and bitwise operations as ipv4 addresses and pings the result"
repository = "https://github.com/isaiahsherfick/pingmoji"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
ping-rs = "0.1.2"
